--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,21 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+body::-webkit-scrollbar {
+  width: 0.6em;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(145deg, #ffd44c, #e9c051, #ffd44c);
+  border-radius: 5px;
+  outline: 1px solid #708090;
+}
+
+body::-webkit-scrollbar-track {
+  background: linear-gradient(to right bottom, #d1d9e6, #e2e8ec);
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.189);
+}
+
 .menu-bg {
   background-image: url("https://i.ibb.co/M16TJfF/bg-section-18.jpg");
 }
